--- a/default.html
+++ b/default.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -87,7 +87,7 @@
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-7">
-                    ENGLISH FOR BUSINESS STUDIES I<br>Created by Virginia Esteve and Victor Lausell<br>If you have any problems, contact: vlausell@comillas.edu&nbsp;</div>
+                    BUSINESS ENGLISH-Part 1<br>Created by Virginia Esteve and Victor Lausell<br>If you have any problems, contact: vlausell@comillas.edu&nbsp;</div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
