--- a/Appendix_1.html
+++ b/Appendix_1.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Menu</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">MENU</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header9 cid-qVoYaKDlXN mbr-fullscreen mbr-parallax-background" id="header9-1e">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header9 cid-qVoYaKDlXN mbr-fullscreen mbr-parallax-background" id="header9-1e">
 
     
 
