--- a/Rev.U1-3.html
+++ b/Rev.U1-3.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Menu</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">MENU</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="header9 cid-qWfSTiD7BT mbr-parallax-background" id="header9-1g">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="header9 cid-qWfSTiD7BT mbr-parallax-background" id="header9-1g">
 
     
 
