--- a/index.U2.html
+++ b/index.U2.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Menu</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">MENU</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header5 cid-qUWQaoShbA mbr-parallax-background" id="header5-r">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header5 cid-qUWQaoShbA mbr-parallax-background" id="header5-r">
 
     
 
